--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "tsc --noEmit && eslint && prettier src -c"
+    "lint": "tsc --noEmit && eslint && prettier src -c",
+    "prepare": "husky install",
+    "pre-commit": "prettier src --write && git add -A .",
+    "pre-push": "npm run lint"
   },
   "dependencies": {
     "lit": "^2.7.6"
@@ -17,6 +20,7 @@
     "@typescript-eslint/parser": "^6.4.0",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
+    "husky": "^8.0.3",
     "prettier": "^3.0.2",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
